2009-12-10  Christos Zoulas <christos@zoulas.com>

	* Make sure to remove nodes in the proper order when going
	  down. Depending on what order the nodes got created it's
	  possible that the parent of a node has a bigger am_mapno
	  (index in exported_ap[]) so that it gets freed before
	  its child while the child's am_parent pointer is still
	  pointing to the already freed block of memory.
	  This change makes sure that umount_exported() cleans up
	  all children of a node first before freeing the node.
	  From: Krisztian Kovacs <Kris.Kovacs@morganstanley.com>

	* Fix Linux-specific stuff in ops_tmpfs.c
	  AUTOFS_TMPFS_FS_FLAGS is defined only in the Linux-specific
	  conf_linux.c file, so it cannot be built on Solaris.
	  From: Krisztian Kovacs <Kris.Kovacs@morganstanley.com>

        * Add missing parenthesis to fix defined(XXX
	  From: Krisztian Kovacs <Kris.Kovacs@morganstanley.com>

	* In the previous commit we've already made a change that
	  makes this code unnecessary since the node is returned
	  even if the backing file server is known to be down.
	  Since the code path is unused it should be removed.
	  From: Krisztian Kovacs <Kris.Kovacs@morganstanley.com>

	* amfs_generic_lookup_child() tries to find an alternate
	  file server if it detects that the current one is down.
	  However, in the comparison used to decide if a possible
	  mount is the same as the current one it compares the am_loc
	  pointers instead of the actual mntfs pointers. Since
	  amfs_lookup_one_location() creates a brand new am_loc
	  structure for the returned mntfs structure the am_loc
	  pointer will be different even if the mntfs it's pointing
	  to is the same.
	  This tricks amfs_generic_lookup_child() think it has
	  found an alternate file server while it hasn't and thus
	  starts multiple racing mounts for the very same node and
	  mntfs.
	  From: Krisztian Kovacs <Kris.Kovacs@morganstanley.com>

	* In the new am_loc scheme mounted mntfs structures still