@@ -464,6 +464,7 @@ AC_CHECK_HEADERS(			\
 	nfs/pathconf.h			\
 	nfs/rpcv2.h			\
 	nfsclient/nfsargs.h		\
+	rpc/auth.h			\
 	rpc/auth_des.h			\
 	rpc/rpc.h			\
 	rpc/types.h			\
